Created Add Delete local json file functionality

--- a/src/database/projects.json
+++ b/src/database/projects.json
@@ -1,172 +1,1 @@
-{
-  "projects": [
-    {
-      "id": 1,
-      "name": "OJB"
-    },
-    {
-      "id": 2,
-      "name": "Admin"
-    },
-    {
-      "id": 3,
-      "name": "Exp Map"
-    },
-    {
-      "id": 4,
-      "name": "Reschedule"
-    }
-  ],
-  "tasks": [
-    {
-      "id": 584958,
-      "value": "curabitur gravida nisi at nibh in hac habitasse",
-      "projects": "Reschedual",
-      "created": "2018-11-22T15:44:43Z"
-    },
-    {
-      "id": 457615,
-      "value": "in sapien iaculis congue vivamus metus arcu",
-      "projects": "Exp Map",
-      "created": "2019-09-07T19:45:35Z"
-    },
-    {
-      "id": 171287,
-      "value": "non mauris morbi non lectus aliquam sit amet diam in",
-      "projects": "Exp Map",
-      "created": "2018-12-06T10:03:22Z"
-    },
-    {
-      "id": 509184,
-      "value": "nibh in lectus pellentesque at nulla suspendisse",
-      "projects": "OJB",
-      "created": "2019-03-30T08:43:58Z"
-    },
-    {
-      "id": 175483,
-      "value": "diam id ornare imperdiet sapien",
-      "projects": "Exp Map",
-      "created": "2019-03-14T19:26:07Z"
-    },
-    {
-      "id": 524961,
-      "value": "ut blandit non interdum in ante vestibulum ante ipsum primis",
-      "projects": "Reschedual",
-      "created": "2018-11-04T12:32:19Z"
-    },
-    {
-      "id": 893165,
-      "value": "in eleifend quam a odio in hac habitasse platea dictumst",
-      "projects": "Admin",
-      "created": "2019-03-11T11:48:40Z"
-    },
-    {
-      "id": 283798,
-      "value": "non mauris morbi non lectus aliquam sit amet diam in",
-      "projects": "Reschedual",
-      "created": "2019-03-03T17:40:33Z"
-    },
-    {
-      "id": 116595,
-      "value": "ac consequat metus sapien ut nunc vestibulum ante",
-      "projects": "Reschedual",
-      "created": "2018-11-15T11:37:28Z"
-    },
-    {
-      "id": 575885,
-      "value": "suspendisse potenti nullam porttitor lacus at",
-      "projects": "Reschedual",
-      "created": "2018-10-31T21:06:38Z"
-    },
-    {
-      "id": 399827,
-      "value": "volutpat dui maecenas tristique est et tempus semper",
-      "projects": "Exp Map",
-      "created": "2019-05-31T13:24:43Z"
-    },
-    {
-      "id": 416484,
-      "value": "parturient montes nascetur ridiculus mus vivamus vestibulum sagittis",
-      "projects": "Reschedual",
-      "created": "2019-06-28T04:56:28Z"
-    },
-    {
-      "id": 868794,
-      "value": "cras in purus eu magna",
-      "projects": "OJB",
-      "created": "2019-07-08T16:13:50Z"
-    },
-    {
-      "id": 492094,
-      "value": "nibh in quis justo maecenas",
-      "projects": "OJB",
-      "created": "2019-09-02T05:52:40Z"
-    },
-    {
-      "id": 928653,
-      "value": "diam vitae quam suspendisse potenti nullam porttitor lacus at turpis",
-      "projects": "OJB",
-      "created": "2018-11-10T05:52:58Z"
-    },
-    {
-      "id": 311748,
-      "value": "eu sapien cursus vestibulum proin eu mi",
-      "projects": "Admin",
-      "created": "2019-10-02T06:34:50Z"
-    },
-    {
-      "id": 100657,
-      "value": "convallis eget eleifend luctus ultricies eu nibh quisque",
-      "projects": "Exp Map",
-      "created": "2018-12-05T03:08:08Z"
-    },
-    {
-      "id": 980624,
-      "value": "vulputate elementum nullam varius nulla facilisi cras non",
-      "projects": "Exp Map",
-      "created": "2018-11-19T05:43:10Z"
-    },
-    {
-      "id": 374902,
-      "value": "pellentesque eget nunc donec quis",
-      "projects": "OJB",
-      "created": "2019-08-19T11:51:31Z"
-    },
-    {
-      "id": 196452,
-      "value": "primis in faucibus orci luctus et ultrices",
-      "projects": "Exp Map",
-      "created": "2019-01-19T07:27:13Z"
-    },
-    {
-      "id": 694104,
-      "value": "et eros vestibulum ac est lacinia",
-      "projects": "Exp Map",
-      "created": "2019-06-08T23:03:55Z"
-    },
-    {
-      "id": 177969,
-      "value": "praesent blandit nam nulla integer pede justo lacinia",
-      "projects": "OJB",
-      "created": "2019-05-12T07:35:29Z"
-    },
-    {
-      "id": 862490,
-      "value": "fusce posuere felis sed lacus morbi sem mauris laoreet",
-      "projects": "OJB",
-      "created": "2019-09-13T20:12:58Z"
-    },
-    {
-      "id": 891375,
-      "value": "id sapien in sapien iaculis congue vivamus metus arcu",
-      "projects": "Exp Map",
-      "created": "2019-07-10T19:27:32Z"
-    },
-    {
-      "id": 185344,
-      "value": "vitae nisi nam ultrices libero non mattis pulvinar nulla",
-      "projects": "Exp Map",
-      "created": "2019-10-16T01:31:41Z"
-    }
-  ]
-}
+[object Object]
