Moved order data to serve and added task component

--- a/src/database/projects.json
+++ b/src/database/projects.json
@@ -1,1 +1,18 @@
-[object Object]
+{
+  "ojb": {
+    "name": "OJB",
+    "id": 1
+  },
+  "rescuedule": {
+    "name": "Reschedule",
+    "id": 1
+  },
+  "admin": {
+    "name": "Admin",
+    "id": 1
+  },
+  "smart": {
+    "name": "Smart",
+    "id": 1
+  }
+}
