Added drag and drop functionality for ordering

--- a/src/database/completedTasks.json
+++ b/src/database/completedTasks.json
@@ -1,56 +1,1 @@
-{
-  "id-1575308203614": {
-    "value": "Whoooo",
-    "projects": "OJB",
-    "created": "2019-12-02T17:36:43.614Z",
-    "id": "id-1575308203614"
-  },
-  "id-1575308761264": {
-    "value": "A new task",
-    "projects": "Reschedule",
-    "created": "2019-12-02T17:46:01.264Z",
-    "id": "id-1575308761264"
-  },
-  "id-1575308802854": {
-    "value": "Hello",
-    "projects": "Admin",
-    "created": "2019-12-02T17:46:42.854Z",
-    "id": "id-1575308802854"
-  },
-  "id-1575308887170": {
-    "value": "123",
-    "projects": "OJB",
-    "created": "2019-12-02T17:48:07.170Z",
-    "id": "id-1575308887170"
-  },
-  "id-1575310144296": {
-    "value": "Hello Noopsy",
-    "projects": "Admin",
-    "created": "2019-12-02T18:09:04.296Z",
-    "id": "id-1575310144296"
-  },
-  "id-1575310209166": {
-    "value": "Test",
-    "projects": "Admin",
-    "created": "2019-12-02T18:10:09.166Z",
-    "id": "id-1575310209166"
-  },
-  "id-1575310226998": {
-    "value": "How about this one?",
-    "projects": "OJB",
-    "created": "2019-12-02T18:10:26.998Z",
-    "id": "id-1575310226998"
-  },
-  "id-1575313892453": {
-    "value": "Test",
-    "projects": "OJB",
-    "created": "2019-12-02T19:11:32.453Z",
-    "id": "id-1575313892453"
-  },
-  "id-1575313905491": {
-    "value": "Something else",
-    "projects": "Smart",
-    "created": "2019-12-02T19:11:45.491Z",
-    "id": "id-1575313905491"
-  }
-}
+{"id-1575308203614":{"value":"Whoooo","projects":"OJB","created":"2019-12-02T17:36:43.614Z","id":"id-1575308203614"},"id-1575308761264":{"value":"A new task","projects":"Reschedule","created":"2019-12-02T17:46:01.264Z","id":"id-1575308761264"},"id-1575308802854":{"value":"Hello","projects":"Admin","created":"2019-12-02T17:46:42.854Z","id":"id-1575308802854"},"id-1575308887170":{"value":"123","projects":"OJB","created":"2019-12-02T17:48:07.170Z","id":"id-1575308887170"},"id-1575310144296":{"value":"Hello Noopsy","projects":"Admin","created":"2019-12-02T18:09:04.296Z","id":"id-1575310144296"},"id-1575310209166":{"value":"Test","projects":"Admin","created":"2019-12-02T18:10:09.166Z","id":"id-1575310209166"},"id-1575310226998":{"value":"How about this one?","projects":"OJB","created":"2019-12-02T18:10:26.998Z","id":"id-1575310226998"},"id-1575313892453":{"value":"Test","projects":"OJB","created":"2019-12-02T19:11:32.453Z","id":"id-1575313892453"},"id-1575313905491":{"value":"Something else","projects":"Smart","created":"2019-12-02T19:11:45.491Z","id":"id-1575313905491"},"id-1575720371290":{"value":"Phone IT about getting a windows VM","projects":"Admin","created":"2019-12-07T12:06:11.290Z","id":"id-1575720371290"},"id-1575720389795":{"value":"Write up mobile modal rules","projects":"Admin","created":"2019-12-07T12:06:29.795Z","id":"id-1575720389795"},"id-1575720265375":{"value":"Catch up with Itzi about Smart chat proposal","projects":"OJB","created":"2019-11-07T12:04:25.375Z","id":"id-1575720265375"},"id-1575720282012":{"value":"Create calendar prototype","projects":"OJB","created":"2019-11-02T12:04:42.012Z","id":"id-1575720282012"},"id-1575720298251":{"value":"Create UT discussion guide","projects":"OJB","created":"2019-12-07T12:04:58.251Z","id":"id-1575720298251"},"id-1575720333155":{"value":"Check OJB labels for accessibility","projects":"OJB","created":"2019-12-07T12:05:33.155Z","id":"id-1575720333155"},"id-1575720348555":{"value":"Get feedback from Nick RE E7 modal option","projects":"OJB","created":"2019-12-07T12:05:48.555Z","id":"id-1575720348555"},"id-1575720447203":{"value":"Add back button to calendar designs","projects":"OJB","created":"2019-12-07T12:07:27.203Z","id":"id-1575720447203"},"id-1575720400219":{"value":"Sketch versioning","projects":"Admin","created":"2019-12-07T12:06:40.219Z","id":"id-1575720400219"},"id-1575720415644":{"value":"Yellow circle - Does it apply to UX?","projects":"Admin","created":"2019-12-07T12:06:55.644Z","id":"id-1575720415644"},"id-1575720465282":{"value":"Create meeting for Jan about Q1 OKRs","projects":"Smart","created":"2019-12-07T12:07:45.282Z","id":"id-1575720465282"},"id-1575733807459":{"value":"","projects":"","created":"2019-12-07T15:50:07.459Z","id":"id-1575733807459"},"id-1575837170476":{"value":"","projects":"","created":"2019-12-08T20:32:50.476Z","id":"id-1575837170476"},"id-1575837954611":{"value":"`1234567890","projects":"","created":"2019-12-08T20:45:54.611Z","id":"id-1575837954611"},"id-1575733986429":{"value":"hello this is a new task","projects":"Admin","created":"2019-12-07T15:53:06.429Z","id":"id-1575733986429"},"id-1575838415276":{"value":"This is a new task","projects":"Admin","created":"2019-12-08T20:53:35.276Z","id":"id-1575838415276"},"id-1576101483454":{"value":"Hello","projects":"","created":"2019-12-11T21:58:03.454Z","id":"id-1576101483454"},"id-1576097564220":{"value":"","projects":"","created":"2019-12-11T20:52:44.220Z","id":"id-1576097564220"},"id-1576097564049":{"value":"","projects":"","created":"2019-12-11T20:52:44.049Z","id":"id-1576097564049"},"id-1576097563505":{"value":"","projects":"","created":"2019-12-11T20:52:43.505Z","id":"id-1576097563505"},"id-1576247643627":{"value":"Hello this is a task","projects":"","created":"2019-12-13T14:34:03.627Z","id":"id-1576247643627"}}
