--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@shopify/draggable": "^1.0.0-beta.8",
     "express": "^4.17.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
