--- a/src/database/projects.json
+++ b/src/database/projects.json
@@ -1,18 +1,1 @@
-{
-  "1": {
-    "name": "OJB",
-    "id": 1
-  },
-  "2": {
-    "name": "Reschedule",
-    "id": 2
-  },
-  "3": {
-    "name": "Admin",
-    "id": 3
-  },
-  "4": {
-    "name": "Smart",
-    "id": 4
-  }
-}
+[{"name":"OJB","id":1},{"name":"Admin","id":3},{"name":"Reschedule","id":2},{"name":"Smart","id":4}]
