--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "priority",
   "version": "0.1.0",
   "private": true,
-  "homepage": "nlhgrx.github.io",
+  "homepage": "nlhgrx.github.io/todo",
   "dependencies": {
     "@shopify/draggable": "^1.0.0-beta.8",
     "express": "^4.17.1",
+    "gh-pages": "^2.2.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
@@ -14,6 +15,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
